--- a/MAGIC_COMMAND_Practice/1_Usecase_Explore_Notebooks_magic_commands.ipynb
+++ b/MAGIC_COMMAND_Practice/1_Usecase_Explore_Notebooks_magic_commands.ipynb
@@ -4,44 +4,535 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "74cb71bf-99b6-4b2a-bf2f-3259b376fd41",
+     "nuid": "c3150f69-58bb-480e-b41d-9b5386582900",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "######Task1: Document the Notebook Using mark down %md <br>\n",
-    "A good Title <br>\n",
-    "Description of the task <br>\n",
-    "Your name in some color <br>\n",
-    "Bring our Team photo from the given url \"https://fpimages.withfloats.com/actual/6929d1ac956d0a744b5c9822.jpeg\" <br>\n",
-    "Use headings, bold, italics appropriately. <br>\n",
+    "#Task1: Document the Notebook Using mark down %md\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4d6daa3e-876b-48d3-b9e0-ba6e747e69a6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Notebook Documentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5a1c56a0-6b64-43b9-b22f-fdece7d09fcc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### MARK DOWN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1249b564-1d65-4a57-ae20-cd30662ab667",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "from IPython.display import display, HTML\n",
+    "display(HTML('<span style=\"color:red; font-weight:bold;\">Sunil Asha</span>'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a08e00a5-001c-4f57-960a-f296d4082ce8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "![](https://fpimages.withfloats.com/actual/6929d1ac956d0a744b5c9822.jpeg) <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f3dfe701-61ab-4ea7-8207-5a98e098f5d4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task2: Create a volume namely usage_metrics using sql magic command %sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e14d5f8d-770c-4162-9a76-6ffc12b4db3d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE VOLUME IF NOT EXISTS workspace.default.usage_metrics;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0c1b10b6-f3aa-48f8-9782-054983576d6e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task3:Call the notebook 4_child_nb_dataload using the magic command %run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b0b3ec59-0eb8-4d3d-845d-a8aebc4905fb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run \"/Workspace/Users/sunilasha625@gmail.com/DataBricksCodeRepo/MAGIC_COMMAND_Practice/4_child_nb_dataload\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "73336758-1cd3-4099-a496-b7ad6c7ae5f1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task5: list the file is created in the given volume or not and do the head of this file using fs magic command %fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a9253d01-6929-4737-8ca0-205d98b5a416",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"name\":209,\"path\":237},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764949737073}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs\n",
+    "ls /Volumes/workspace/default/usage_metrics/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4d6730fc-be2c-4e6b-b4ca-ec637ca1fb41",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs \n",
+    "head /Volumes/workspace/default/usage_metrics/mobile_os_usage.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a751017d-6493-4ba4-9ee0-470314cad268",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task6: Create a pyspark dataframe df1 reading the data from the above file using pyspark magic command %python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "752f2988-db12-4111-a11e-84e8e5c4c75f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "df1=spark.read.csv(\"/Volumes/workspace/default/usage_metrics/mobile_os_usage.csv\")\n",
+    "df1.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fb42b130-de6e-4bfb-9558-2d233264a5f1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task7: Write the above dataframe df1 data into a databricks table called 'default.mobile_os_usage' using pyspark magic command %python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ccaf49e9-1cfa-4809-aefc-01d211d1288f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1.write.saveAsTable(\"mobile_os_usage\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f178f2e9-9b49-4ee7-859a-ac589f893c6d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task8: Write sql query to display the data loaded into the table 'default.mobile_os_usage' using the pyspark magic command %python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6f78e55c-0f64-4f84-9c3f-49a11d2971c8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "spark.read.table(\"mobile_os_usage\").show(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "12b1873e-3279-42a7-90e1-44133b841518",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task9: Create a python function to convert the given input to upper case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "941a5855-e713-4a05-8d25-d62951605dd8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def to_upper(text):\n",
+    "    return text.upper()\n",
+    "result=to_upper(\"sunil\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5130333f-e8a3-446b-ae46-020c45119a4d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result = to_upper(\"hello databricks\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "23e6d8ed-a5ea-4b6d-8654-2dabcd8048dd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task10: Install pandas library using the pip python magic command %pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "28ed23b5-7339-4e68-9a3e-5e2d418024e8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a1eb982d-00a5-4307-85d6-9f24a63da983",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task11: Import pandas, using pandas read_csv and display the output using the magic command %python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "76041c8b-e067-41bc-ba74-ea9e22d20fec",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
     "\n",
-    "Task2: Create a volume namely usage_metrics using sql magic command %sql\n",
+    "import pandas as pd\n",
     "\n",
-    "Task3: \n",
-    "Create a child notebook \"4_child_nb_dataload\" and write code to load data, Using the requests library, perform api call to pull data from \"https://public.tableau.com/app/sample-data/mobile_os_usage.csv\" into a python variable using the magic command %py and write the data into the created volume \"/Volumes/workspace/default/usage_metrics/mobile_os_usage.csv\" using the above variable.text using the magic command dbutils.fs.put(\"volume\",variable.text,overwrite=True)\n",
+    "# Path of the file stored in the Volume\n",
+    "file_path = \"/Volumes/workspace/default/usage_metrics/mobile_os_usage.csv\"\n",
     "\n",
-    "Task4: Call the notebook 4_child_nb_dataload using the magic command %run\n",
+    "# Read the CSV file using pandas\n",
+    "df_pd = pd.read_csv(file_path)\n",
     "\n",
-    "Task5: list the file is created in the given volume or not and do the head of this file using fs magic command %fs \n",
-    "\n",
-    "Task6: Create a pyspark dataframe df1 reading the data from the above file using pyspark magic command %python\n",
-    "\n",
-    "Task7: Write the above dataframe df1 data into a databricks table called 'default.mobile_os_usage' using pyspark magic command %python\n",
-    "\n",
-    "Task8: Write sql query to display the data loaded into the table 'default.mobile_os_usage' using the pyspark magic command %python \n",
-    "\n",
-    "Task9: Create a python function to convert the given input to upper case\n",
-    "\n",
-    "Task10: Install pandas library using the pip python magic command %pip\n",
-    "\n",
-    "Task11: Import pandas, using pandas read_csv and display the output using the magic command %python\n",
-    "\n",
-    "Task12: echo \"Magic commands tasks completed\" using the linux shell magic command %sh "
+    "# Display the DataFrame\n",
+    "df_pd.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5dcdf9a3-f04f-4d8e-b2e3-3b60fe0b17f6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Task12: echo \"Magic commands tasks completed\" using the linux shell magic command %sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "75974479-4f42-4784-a263-61221be90e18",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sh\n",
+    "echo \"Magic commands tasks completed\""
    ]
   }
  ],
@@ -63,7 +554,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7900721791748489,
+     "commandId": 8388292713643628,
      "dataframes": [
       "_sqldf"
      ]
