--- a/1_Explore_Notebooks_magic_commands.ipynb
+++ b/1_Explore_Notebooks_magic_commands.ipynb
@@ -6,16 +6,17 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "cea6d025-3d8b-4b98-83dc-8a0a35dfd1de",
+     "nuid": "2c477351-9470-4b26-8f73-6f967c37729e",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "#COMPLETE MAGIC COMMANDS NOTEBOOK EXAMPLE \n",
+    "#Welcome to Inceptez Technologies \n",
     "Let us understand about creating notebooks & magical commands\n",
-    "![](https://s.yimg.com/fz/api/res/1.2/UwQDLJVZiPNd41YdZKy9Pg--~C/YXBwaWQ9c3JjaGRkO2ZpPWZpbGw7aD00MTI7cHhvZmY9NTA7cHlvZmY9MTAwO3E9ODA7c3M9MTt3PTM4OA--/https://i.pinimg.com/736x/07/21/1d/07211d2613d7d8c03646943718178c93.jpg)\n"
+    "https://fplogoimages.withfloats.com/actual/68009c3a43430aff8a30419d.png\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/VNIT_Nagpur_main.jpg/500px-VNIT_Nagpur_main.jpg)"
    ]
   },
   {
@@ -24,7 +25,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "4b1183c4-305d-452b-8438-bd5dda05b214",
+     "nuid": "3ae38262-0e89-4a3b-9130-322375328fe4",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -47,7 +48,7 @@
     "- %lsmagic: lists all the available magic commands.\n",
     "- %config: allows you to set configuration options for the notebook.\n",
     "- %load: loads the contents of a file into a cell.\n",
-    "- %who: lists all the variables in the current scope.\n"
+    "- %who: lists all the variables in the current scope."
    ]
   },
   {
@@ -56,7 +57,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "945fbdd4-e48a-401f-b22a-35d971d79ff8",
+     "nuid": "b35163da-292b-4c60-b6a9-a62521e22343",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -73,11 +74,10 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
-      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "e355a450-e25f-4cc4-82f2-ba77a0b55b7d",
+     "nuid": "cb391d1b-fb52-49ab-a463-2849a7f60fea",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -85,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "%run \"/Workspace/Users/sunilasha625@gmail.com/MAGIC_COMMAND_Practice/Magic_command_child\""
+    "%run \"/Workspace/Users/infoblisstech@gmail.com/databricks-code-repo/databricks_workouts_2025/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/4_child_notebook\""
    ]
   },
   {
@@ -94,7 +94,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "c1c930ae-00bd-4bf9-ac6f-f9183774c235",
+     "nuid": "7b7260e3-4612-4e86-ac30-51e7c91fe669",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -114,7 +114,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "541543e6-01e8-4eaa-b4bf-5efdde2a3342",
+     "nuid": "7f274612-5fb2-4589-86c6-d236abeb9aba",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -123,7 +123,8 @@
    "outputs": [],
    "source": [
     "%sh\n",
-    "ls"
+    "ls /databricks-datasets/airlines\n",
+    "head /databricks-datasets/airlines/part-01901"
    ]
   },
   {
@@ -132,7 +133,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "b3e58b64-7028-4092-b41f-b112ff3355bf",
+     "nuid": "85ffa4e3-dc14-4ea4-bab4-94151bc22f9d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -140,10 +141,7 @@
    },
    "source": [
     "We are going to use Databricks Unity Catalog (We don't know about it yet)\n",
-    "to create tables and files under the volume (catalog/schema/volume/folder/files)\n",
-    "- workspace(Your catalog) \n",
-    "- default(Your (default) schema)\n",
-    "- mymanagedtable(Name of your volume (folder))"
+    "to create tables and files under the volume (catalog/schema/volume/folder/files)"
    ]
   },
   {
@@ -157,7 +155,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "7ff9a992-6a7b-4728-859c-c2d800dfb847",
+     "nuid": "85719c48-7508-45d6-b879-d5ab1e956bcc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -166,7 +164,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE VOLUME IF NOT EXISTS workspace.default.mymanagedtable"
+    "CREATE VOLUME IF NOT EXISTS workspace.default.volumewd36;"
    ]
   },
   {
@@ -175,7 +173,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "8b634509-2bf1-4b9e-aaf0-3055af3ed7c8",
+     "nuid": "97a1ed02-dc2f-4eac-9b34-ed9237d3cd20",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -195,7 +193,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d4180a6c-2a7e-4293-ad24-070f04967075",
+     "nuid": "6947aa56-af9f-42de-8262-b7bc680203f7",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -203,31 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "%fs\n",
-    "ls /Volumes/workspace/default/mymanagedtable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ca887a95-b3b6-4ec1-9f71-f492ceb5702b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "CREATE VOLUME IF NOT EXISTS workspace.default.vol"
+    "%fs ls \"/Volumes/workspace/default/volumewd36\""
    ]
   },
   {
@@ -236,14 +210,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "c523b382-babb-4872-bd51-c855355abfe2",
+     "nuid": "334d9f68-7766-465e-b373-e267a3de7f58",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "####Upload some sample data going into (Catalog -> My Organization -> Workspace -> Default -> Volumes), How to run a DBFS (Hadoop) FS commands inside a notebook using %fs magic command to copy the uploaded data into some other volume from the uploaded volume"
+    "Learning for the first time the dbutils, we learn in detail later"
    ]
   },
   {
@@ -256,7 +230,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "303f0927-ab5f-4526-8d3e-26e7d00dde9e",
+     "nuid": "0813af49-df50-4665-8af9-f7c592a4055a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -264,8 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "%fs\n",
-    "cp \"/Volumes/workspace/default/mymanagedtable/employees.csv\" \"/Volumes/workspace/default/vol/employees.csv\""
+    "%fs cp \"dbfs:/Volumes/workspace/default/volumewd36/sample_healthcare_patients.csv\" \"/Volumes/workspace/default/volume1/sample_healthcare_patients.csv\""
    ]
   },
   {
@@ -274,7 +247,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "d3ff0049-b16e-41b6-bdf1-f7d98216e899",
+     "nuid": "0a8e80b8-4546-468b-87ed-7bb6012c1a7b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -294,7 +267,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "be95b978-70ac-41fc-bdf3-5437effc71d4",
+     "nuid": "e286ceb9-8f13-47d1-861b-f99b4e1e59b6",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -303,7 +276,7 @@
    "outputs": [],
    "source": [
     "dbutils.fs.cp(\n",
-    "    \"dbfs:/Volumes/workspace/default/mymanagedtable/employees.csv\", \"/Volumes/workspace/default/vol/employees.csv\")"
+    "    \"dbfs:/Volumes/workspace/default/volumewd36/sample_healthcare_patients.csv\",\"/Volumes/workspace/default/volume1/sample_healthcare_patients.csv\")"
    ]
   },
   {
@@ -312,7 +285,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "f4d0233f-444b-4455-9320-f64271991cad",
+     "nuid": "a43dd280-49bc-4f22-97fb-08a6b23218cc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -327,29 +300,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "1e021d45-deab-443e-b33b-6bba50b78e66",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "07ae94a4-0cb4-40ae-8218-d233881255a6",
+     "nuid": "0421bbb7-38d3-4c49-bc4a-28f0c30072e1",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -368,9 +325,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "2872478e-dfb8-47e8-8ce9-683dea01fd06",
+     "nuid": "d1fe763e-6058-4ad3-980e-ae595fc32499",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -393,7 +354,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "37ee6775-6261-435f-998d-73793748c4c9",
+     "nuid": "3485856e-b35c-415f-a588-b74aadcbeafd",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -406,12 +367,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "76e4105c-4831-4fc5-a24a-d4bf5ebe9e42",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "show create table default.cities1;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "62c9b673-f05a-4e90-bcc6-f93373bffbae",
+     "nuid": "0cb845bd-3334-4f02-8794-28797af494a0",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -431,7 +415,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "be0136f3-d942-4ef7-99ae-5143a2992d6d",
+     "nuid": "4745b1ba-c25c-4c6f-9a4b-6ab4ad27bd98",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -439,9 +423,28 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
     "def sqrt(a):\n",
-    "    return a*a\n",
+    "    return a*a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "86607897-fad2-454f-86ab-d1f639889cca",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "print(\"square root function call \",sqrt(10))"
    ]
   },
@@ -455,7 +458,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "93aad548-5217-4369-a2ef-d1f274e083cf",
+     "nuid": "5f63c0dd-51cb-4c14-8dc3-f55ab0ec9009",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -464,29 +467,7 @@
    "outputs": [],
    "source": [
     "%python\n",
-    "print(\"square root function call \",sqrt(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "707627d4-bc71-41c3-a8b2-035dc2d2c9ef",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%python \n",
-    "df1=spark.read.csv(\"/Volumes/workspace/default/mymanagedtable/employees.csv\",header=True)\n",
+    "df1=spark.read.csv(\"/Volumes/workspace/default/volumewd36/sample_healthcare_patients.csv\",header=True)\n",
     "print(df1.is_cached)\n",
     "df2=df1.repartition(4)\n",
     "display(df2)"
@@ -502,7 +483,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8289f936-b1b6-4927-a147-fe972c37eff0",
+     "nuid": "852e8016-9d82-465f-80df-f8cc0c4dab02",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -510,7 +491,6 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
     "df2.write.saveAsTable(\"healthcare_patients\")"
    ]
   },
@@ -524,7 +504,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "1742baf3-f09c-40ff-a426-c76c23fbe291",
+     "nuid": "f5e2cf2a-3140-4aac-b8e6-babab71ed9bc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -532,31 +512,70 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
     "spark.read.table(\"healthcare_patients\").show(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1c3c9245-15f8-488a-99f1-c4ea979f607e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "####How to install additional libraries in this current Python Interpreter using %pip magic command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "11ac3360-e8f1-4454-a37d-9ca2f965fcdd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%pip install pypi"
    ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
-   "dashboards": [],
-   "environmentMetadata": {
-    "base_environment": "",
-    "environment_version": "4"
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
    },
+   "dashboards": [],
+   "environmentMetadata": null,
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8359225825807181,
+     "commandId": 6068296353006432,
      "dataframes": [
       "_sqldf"
      ]
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Magic_commands1",
+   "notebookName": "1_Explore_Notebooks_magic_commands",
    "widgets": {}
   },
   "language_info": {
