--- a/MAGIC_COMMAND_Practice/Magic_command_child.ipynb
+++ b/MAGIC_COMMAND_Practice/Magic_command_child.ipynb
@@ -63,6 +63,78 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1ac65e55-317f-4ad6-ae85-406e74624d3a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "dbutils.widgets.text(\"Name\",\"Unkown\")\n",
+    "name=dbutils.widgets.get(\"Name\")\n",
+    "print(\"The name you entered is:\",name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "682ef2c9-a597-47ce-a789-78663d207efd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.widgets.dropdown(\"Gender\",\"Male\",[\"Male\",\"Female\",\"GAY\"])\n",
+    "gender=dbutils.widgets.get(\"Gender\")\n",
+    "print(\"The gender you entered is:\",gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c7c1c1e1-7dfc-4340-a76a-cae1655f2ca2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.widgets.text(\"p_path\",\"/Volumes/workspace/default/usage_metrics\",\"Enter File Path\")\n",
+    "path=dbutils.widgets.get(\"p_path\")\n",
+    "print(\"The path you entered is:\",path)\n",
+    "df = spark.read.csv(path)\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0db8a543-d07e-49f4-b552-5ccf8e98c232",
@@ -92,6 +164,94 @@
    },
    "notebookName": "Magic_command_child",
    "widgets": {
+    "Gender": {
+     "currentValue": "Female",
+     "nuid": "dfa86a97-5693-493f-8598-3ea18bcf2102",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "Male",
+      "label": null,
+      "name": "Gender",
+      "options": {
+       "widgetDisplayType": "Dropdown",
+       "choices": [
+        "Male",
+        "Female",
+        "GAY"
+       ],
+       "fixedDomain": true,
+       "multiselect": false
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "dropdown",
+      "defaultValue": "Male",
+      "label": null,
+      "name": "Gender",
+      "options": {
+       "widgetType": "dropdown",
+       "autoCreated": null,
+       "choices": [
+        "Male",
+        "Female",
+        "GAY"
+       ]
+      }
+     }
+    },
+    "Name": {
+     "currentValue": "Sunil",
+     "nuid": "b2d31ef1-e573-449e-a1fa-e918a2437e85",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "Unkown",
+      "label": null,
+      "name": "Name",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "Unkown",
+      "label": null,
+      "name": "Name",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "p_path": {
+     "currentValue": "/Volumes/workspace/default/usage_metrics",
+     "nuid": "7eafea3a-a5c6-4a2e-bfd4-f6dde77f9e30",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "/Volumes/workspace/default/usage_metrics",
+      "label": "Enter File Path",
+      "name": "p_path",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "/Volumes/workspace/default/usage_metrics",
+      "label": "Enter File Path",
+      "name": "p_path",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
     "param1": {
      "currentValue": "Sunil",
      "nuid": "1b3d4ce1-eb29-4a25-8b01-fb287661c3d7",
