--- a/databricks_workouts_2025_WE47/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/1_Explore_Notebooks_magic_commands.ipynb
+++ b/databricks_workouts_2025_WE47/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/1_Explore_Notebooks_magic_commands.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2c477351-9470-4b26-8f73-6f967c37729e",
      "showTitle": false,
@@ -26,10 +23,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3ae38262-0e89-4a3b-9130-322375328fe4",
      "showTitle": false,
@@ -61,10 +55,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b35163da-292b-4c60-b6a9-a62521e22343",
      "showTitle": false,
@@ -101,10 +92,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7b7260e3-4612-4e86-ac30-51e7c91fe669",
      "showTitle": false,
@@ -185,10 +173,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "97a1ed02-dc2f-4eac-9b34-ed9237d3cd20",
      "showTitle": false,
@@ -286,10 +271,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a43dd280-49bc-4f22-97fb-08a6b23218cc",
      "showTitle": false,
@@ -421,10 +403,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0cb845bd-3334-4f02-8794-28797af494a0",
      "showTitle": false,
@@ -598,10 +577,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "1c3c9245-15f8-488a-99f1-c4ea979f607e",
      "showTitle": false,
