--- a/databricks_workouts_2025_WE47/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/2_Explore_Notebook_Markdowns.ipynb
+++ b/databricks_workouts_2025_WE47/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/2_Explore_Notebook_Markdowns.ipynb
@@ -116,10 +116,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a7967bfd-6528-4b42-bd8b-8f8f251fba02",
      "showTitle": false,
@@ -135,10 +132,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e8d1dcea-9fc3-45db-86c5-43c19d75710a",
      "showTitle": false,
@@ -170,10 +164,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7c9fc9b4-2d30-4bb3-8932-01495c8b5786",
      "showTitle": false,
@@ -189,10 +180,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7b8d623b-f654-4e28-9399-6e1acad1ffc0",
      "showTitle": false,
@@ -208,10 +196,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "486d7884-73e3-4a60-9fc2-2ef0a49fc2b4",
      "showTitle": false,
@@ -243,10 +228,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "d8bf1fd6-2aac-4e22-8e88-27b54eb3de92",
      "showTitle": false,
@@ -264,10 +246,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2ca1c554-d730-451d-9dce-6ee98bb9d136",
      "showTitle": false,
@@ -284,10 +263,21 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d8d2b6af-655c-48b9-8c7a-65a7882608aa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ea06f315-b1ab-4e41-b9e0-7b561e633cf9",
      "showTitle": false,
@@ -306,10 +296,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "6e366d03-811c-4548-9a77-b38ca97d2ac4",
      "showTitle": false,
@@ -329,10 +316,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a8a1de18-2d42-447e-a677-210fc56e138e",
      "showTitle": false,
@@ -349,10 +333,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "f88a1ce7-b687-434f-81ed-5dd7ec5c0e6b",
      "showTitle": false,
@@ -364,6 +345,22 @@
     "######To learn markdowns more in detail\n",
     "Click here [Microsoft markdown cheatsheet](https://docs.databricks.com/aws/en/notebooks/notebook-media)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f5a211fb-225f-46dd-b644-49af8b3fe74f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
