--- a/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
+++ b/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
@@ -71,7 +71,7 @@
     }
    },
    "source": [
-    "#Explanation of Your Project Workflow"
+    "#Explanation of Project Workflow"
    ]
   },
   {
@@ -87,7 +87,7 @@
     }
    },
    "source": [
-    "####create 3 folders inside a Volume (dbfs:/Volumes/…),such as:\n",
+    "####Create 3 folders inside a Volume (dbfs:/Volumes/…),such as:\n",
     "- /raw\n",
     "- /processed\n",
     "- /archive"
