--- a/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
+++ b/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
@@ -29,7 +29,7 @@
     }
    },
    "source": [
-    "# Healthcare Data Utilities Usecase2\n",
+    "#Healthcare Data Utilities Usecase2\n",
     "\n",
     "## Objective\n",
     "This notebook demonstrates how to design Databricks notebooks using Markdown\n",
@@ -80,17 +80,19 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "86e0b304-c942-43ec-83af-ca3892ddd6f3",
+     "nuid": "a9dfcecd-ee19-4414-85ae-2465e03e3850",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "####Create 3 folders inside a Volume (dbfs:/Volumes/…),such as:\n",
-    "- /raw\n",
-    "- /processed\n",
-    "- /archive"
+    "##Create sample healthcare data\n",
+    "**Will generate a small sample dataset (CSV) like:**\n",
+    "- patients.csv\n",
+    "- visits.csv\n",
+    "- claims.csv <br>\n",
+    "**And place it inside the raw folder.**"
    ]
   },
   {
@@ -99,19 +101,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "a9dfcecd-ee19-4414-85ae-2465e03e3850",
+     "nuid": "40f9671d-7aec-4ef7-ab0d-44bc23a6c21d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "####Create sample healthcare data\n",
-    "####Will generate a small sample dataset (CSV) like:\n",
-    "- patients.csv\n",
-    "- visits.csv\n",
-    "- claims.csv\n",
-    "####And place it inside the raw folder."
+    "# Create folder structure using Volumes"
    ]
   },
   {
@@ -134,10 +131,105 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE VOLUME IF NOT EXISTS workspace.default.raw;\n",
-    "CREATE VOLUME IF NOT EXISTS workspace.default.processed;\n",
-    "CREATE VOLUME IF NOT EXISTS workspace.default.archive;"
+    "CREATE VOLUME IF NOT EXISTS workspace.default.healthCare;\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "86e0b304-c942-43ec-83af-ca3892ddd6f3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Create 3 folders inside a Volume (dbfs:/Volumes/…),such as:\n",
+    "- /raw\n",
+    "- /processed\n",
+    "- /archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cc3606da-4d85-4fc8-af01-8bd3f627a8c7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.fs.mkdirs(\"/Volumes/workspace/default/healthCare/raw\")\n",
+    "dbutils.fs.mkdirs(\"/Volumes/workspace/default/healthCare/processed\")\n",
+    "dbutils.fs.mkdirs(\"/Volumes/workspace/default/healthCare/archive\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "21590341-e17b-42d2-99d2-31fca7babf25",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Perform file operations using dbutils.fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7bd488b6-ed4f-494e-8dc3-20d4376a9923",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.fs.help()\n",
+    "print(\"Perform file operations using dbutils.fs\")\n",
+    "print(\"Using cp,head,ls,mkdirs.mv,put,rm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d238de00-dd76-415c-90f8-b2ebe12b0820",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
