--- a/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
+++ b/WIP Usecase2/Untitled Notebook 2025-12-08 22_06_57.ipynb
@@ -29,7 +29,7 @@
     }
    },
    "source": [
-    "#Healthcare Data Utilities Usecase2\n",
+    "#$${\\color{RED}Healthcare-Data-Utilities-Usecase2}$$\n",
     "\n",
     "## Objective\n",
     "This notebook demonstrates how to design Databricks notebooks using Markdown\n",
